<resources>
    <string name="app_name">AllyZone</string>
    <string name="write_something_here">Write Something here...</string>
    <string name="insert_image_icon">Insert Image Icon</string>
    <string name="divider_line">Divider Line</string>
    <string name="username">username</string>

    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="phone_number_email_or_username">email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="or_line">or line</string>
    <string name="or">OR</string>
    <string name="create_new_account">Create new account</string>
    <string name="log_in_with_facebook">Log in with Facebook</string>
    <string name="full_name">Full name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="save_password">Save Password</string>
    <string name="cont">Continue</string>
    <string name="birthday_icon">Birthday Icon</string>
    <string name="add_your_birthday">Add Your Birthday</string>
    <string name="this_won_t_be_part_of_your_public_profile">This won\'t be part of your public profile</string>
    <string name="pick_username">Pick USERNAME</string>
    <string name="pick_username_for_your_account">Pick username for your account</string>
    <string name="you_can_change_it_later">You can change it later</string>
    <string name="illustrate_image">illustrate_image</string>
    <string name="profile_bg">profile bg</string>
    <string name="special_characters"><![CDATA[Special Characters(!@#$%&*_?.)]]></string>
    <string name="logo">LOGO</string>
    <string name="app_logo">App Logo</string>
</resources>
